tests/negative/semantic/string_index_assignment/input.ci
void main() {
    string s = "abc";
    s[0] = "x";
}
